speedtest/1.deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: speedtest
  namespace: devops
spec:
  replicas: 1
  selector:
    matchLabels:
      app: speedtest
  template:
    metadata:
      labels:
        app: speedtest
    spec:
      containers:
        - name: speedtest
          image: adolfintel/speedtest:latest
          securityContext:
            runAsUser: 0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
              name: web
              protocol: TCP
          resources:
            limits:
              cpu: "0.5"
              memory: 50Mi
            requests:
              cpu: "0.25"
              memory: 25Mi
          livenessProbe:
            httpGet:
              port: 80
              path: /
            initialDelaySeconds: 10
            timeoutSeconds: 5
            failureThreshold: 10
          readinessProbe:
            httpGet:
              port: 80
              path: /
            initialDelaySeconds: 10
          volumeMounts:
            - mountPath: /etc/localtime
              name: localtime
      volumes:
        - hostPath:
            path: /etc/localtime
            type: ""
          name: localtime
