speedtest/2.service-clusterip.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: speedtest
  namespace: devops
  labels:
    app: speedtest
spec:
  selector:
    app: speedtest
  type: ClusterIP
  ports:
    - port: 80
      name: web
      targetPort: 80
      protocol: TCP
