speedtest/2.service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: speedtest
  namespace: devops
  labels:
    app: speedtest
spec:
  selector:
    app: speedtest
  type: ClusterIP
  ports:
    - port: 80
      name: web
      targetPort: 80
      protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: speedtest
  namespace: devops
  labels:
    app: speedtest
spec:
  ingressClassName: nginx
  rules:
  - host: speedtest.github.icu
    http:
      paths:
      - backend:
          service:
            name: speedtest
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - speedtest.github.icu
    secretName: github-tls
